remove TimingException