@@ -5,7 +5,6 @@ import java.util.Arrays;
 import java.util.List;
 
 import org.junit.jupiter.api.Test;
-import org.team100.lib.geometry.GeometryUtil;
 import org.team100.lib.geometry.Pose2dWithMotion;
 import org.team100.lib.geometry.WaypointSE2;
 import org.team100.lib.logging.LoggerFactory;
@@ -16,7 +15,7 @@ import org.team100.lib.subsystems.swerve.kinodynamics.SwerveKinodynamicsFactory;
 import org.team100.lib.testing.Timeless;
 import org.team100.lib.trajectory.Trajectory100;
 import org.team100.lib.trajectory.path.Path100;
-import org.team100.lib.trajectory.timing.ScheduleGenerator.TimingException;
+import org.team100.lib.trajectory.path.PathFactory;
 
 import edu.wpi.first.math.geometry.Pose2d;
 import edu.wpi.first.math.geometry.Rotation2d;
@@ -24,7 +23,6 @@ import edu.wpi.first.math.geometry.Rotation2d;
 /**
  * Verify that trajectory schedule generation yields a realistic profile.
  * 
- * see
  * https://docs.google.com/spreadsheets/d/16UUCCz-qcPz_YZMnsJnVkVO1KGp5zHCOVo7EoJct2nA/edit?gid=0#gid=0
  */
 public class TrajectoryVelocityProfileTest implements Timeless {
@@ -32,7 +30,7 @@ public class TrajectoryVelocityProfileTest implements Timeless {
     private static final LoggerFactory logger = new TestLoggerFactory(new TestPrimitiveLogger());
 
     // A five-meter straight line.
-    public static final Pose2dWithMotion[] WAYPOINTS = new Pose2dWithMotion[] {
+    private static final Pose2dWithMotion[] WAYPOINTS = new Pose2dWithMotion[] {
             new Pose2dWithMotion(WaypointSE2.irrotational(
                     new Pose2d(0, 0, new Rotation2d(0)), 0, 1.2), 0, 0),
             new Pose2dWithMotion(WaypointSE2.irrotational(
@@ -40,71 +38,66 @@ public class TrajectoryVelocityProfileTest implements Timeless {
             new Pose2dWithMotion(WaypointSE2.irrotational(
                     new Pose2d(5, 0, new Rotation2d(0)), 0, 1.2), 0, 0) };
 
-    // No rotation.
-    public static final List<Rotation2d> HEADINGS = List.of(
-            GeometryUtil.fromDegrees(0),
-            GeometryUtil.fromDegrees(0));
+    private static List<WaypointSE2> waypointList = Arrays.asList(WAYPOINTS).stream().map(p -> p.getPose()).toList();
 
-    void print(Trajectory100 traj) {
-        if (!DEBUG)
-            return;
-        System.out.println("t, v");
-        for (double t = 0; t < traj.duration(); t += 0.02) {
-            System.out.printf("%6.3f, %6.3f\n", t, traj.sample(t).velocityM_S());
-        }
-
-    }
+    private static Path100 path = PathFactory.pathFromWaypoints(waypointList, 0.1, 0.1, 0.1, 0.1);
 
     /**
-     * This uses the default max accel which is ridiculously high.
+     * Default max accel and velocity makes a very fast triangle profile.
      */
     @Test
-    void testNoConstraint() throws TimingException {
+    void testNoConstraint() {
         List<TimingConstraint> constraints = new ArrayList<TimingConstraint>();
         ScheduleGenerator u = new ScheduleGenerator(constraints);
-        Trajectory100 traj = u.timeParameterizeTrajectory(WAYPOINTS, 0, 0);
-        print(traj);
+        Trajectory100 traj = u.timeParameterizeTrajectory(path, 0.1, 0, 0);
+        if (DEBUG)
+            traj.dump();
     }
 
     /**
-     * This produces a trapezoid.
+     * This produces a trapezoid with the correct cruise (3.5) and accel/decel the
+     * same (10)
      */
     @Test
-    void testConstantConstraint() throws TimingException {
+    void testConstantConstraint() {
         // somewhat realistic numbers
         SwerveKinodynamics limits = SwerveKinodynamicsFactory.forTrajectoryTimingTest(logger);
         List<TimingConstraint> constraints = List.of(new ConstantConstraint(logger, 1, 1, limits));
         ScheduleGenerator u = new ScheduleGenerator(constraints);
-        Trajectory100 traj = u.timeParameterizeTrajectory(WAYPOINTS, 0, 0);
-        print(traj);
+        Trajectory100 traj = u.timeParameterizeTrajectory(path, 0.1, 0, 0);
+        if (DEBUG)
+            traj.dump();
     }
 
     /**
-     * This produces the desired current-limited exponential shape.
+     * This produces the desired current-limited exponential shape for acceleration,
+     * and faster decel at the end.
      * 
-     * TODO: this tickles a bug in the schedule generator dt(), fix it.
+     * https://docs.google.com/spreadsheets/d/1sbB-zTBUjRRlWHaWXe-V1ZDhAZCFwItVVO1x3LmZ4B4/edit?gid=104506786#gid=104506786
      */
     @Test
-    void testSwerveConstraint() throws TimingException {
+    void testSwerveConstraint() {
         SwerveKinodynamics limits = SwerveKinodynamicsFactory.forTrajectoryTimingTest(logger);
         List<TimingConstraint> constraints = List.of(new SwerveDriveDynamicsConstraint(logger, limits, 1, 1));
         ScheduleGenerator u = new ScheduleGenerator(constraints);
-        Trajectory100 traj = u.timeParameterizeTrajectory(WAYPOINTS, 0, 0);
-        print(traj);
+        Trajectory100 traj = u.timeParameterizeTrajectory(path, .1, 0, 0);
+        if (DEBUG)
+            traj.dump();
     }
 
+    /**
+     * Realistic, cruses at 3.5 (which is right)
+     * 
+     * https://docs.google.com/spreadsheets/d/1sbB-zTBUjRRlWHaWXe-V1ZDhAZCFwItVVO1x3LmZ4B4/edit?gid=1802036642#gid=1802036642
+     */
     @Test
-    void testAuto() throws TimingException {
-        // i think this is broken because one of the constraints
-        // is producing zero as the acceleration limit
-        // even though the velocity is also zero
+    void testAuto() {
         SwerveKinodynamics limits = SwerveKinodynamicsFactory.forTrajectoryTimingTest(logger);
         TimingConstraintFactory timing = new TimingConstraintFactory(limits);
         List<TimingConstraint> constraints = timing.testAuto(logger);
         ScheduleGenerator u = new ScheduleGenerator(constraints);
-        Trajectory100 traj = u.timeParameterizeTrajectory(
-                new Path100(Arrays.asList(WAYPOINTS)), 0.5, 0, 0);
-        // Trajectory100 traj = u.timeParameterizeTrajectory(WAYPOINTS, 0, 0);
-        print(traj);
+        Trajectory100 traj = u.timeParameterizeTrajectory(path, 0.5, 0, 0);
+        if (DEBUG)
+            traj.dump();
     }
 }
